2022-06-23

        * Version 2.1.0 released
        ========================

        Add optional energy scaling in GModelSpectralTable class (#4069)
        Add GNdarray::index() method (#4069)


2022-06-06

        * Version 2.0.0 released
        ========================

        Add gammalib::getenv() function (#4063)
        Add GEbounds::remove() method (#4062)
        Add ASTRI and FACT as supported instrument type for the CTA module (#4058)
        Fix bug in GGti::insert() and GGti::merge() methods (#4030)
        By default, do not allow log-likelihood decrease in LM optimiser
        Support Galactic coordinates in spatial models (#3988)
        Correctly return UTC times before 1972 (#3974)
        Implement CGRO clock correction (#3973)
        Add support for COMPTEL pulsar analysis (#3973)
        Add GCOMObservation::tim() and GCOMObservation::oads() setter methods
        Add GModelSpatialRadialGeneralGauss and 
          GModelSpatialEllipticalGeneralGauss classes (#3924)
        Remove GCOMSelection::zeta_min() and GCOMSelection::zeta_max()
          methods
        Add GCOMSelection::fpmtflag(), GCOMSelection::use_d1() and 
          GCOMSelection::use_d2() methods (#3917)
        Rename GCOMModelDRBFitting class to GCOMModelDRBPhibarNodes (#3914)
        Add GCOMModelDRBPhibarBins class (#3913)
        Compute spectral model gradients for negative factor values
        Add likelihood fit event selection hook (#3912)
        Add GCOMModelDRM class (#3910)
        Add angle(GVector&,GVector&) friend function (#3908)
        Add GSkyDir::galvector() methods (#3907)
        Make extension name check case insensitive in GFits::extno()
        Add numerical gradient step size member to GObservation
        Add stamp() methods to GApplication (#3662)
        Display application header in debug mode (#3631) 
        Add ASCL shield to "About" page (#3630)
        Add GModelSpectralFunc spectral constructor (#3626)